Closed Bug 1641615 Opened 5 years ago Closed 5 years ago

WebXR "user gesture is required" in several pages

Categories

(Core :: WebVR, defect)

defect

Tracking

()

RESOLVED FIXED
mozilla79
Tracking Status
firefox79 --- fixed

People

(Reporter: mortimergoro, Assigned: mortimergoro)

Details

Attachments

(1 file, 1 obsolete file)

Reported here:
https://github.com/MozillaReality/FirefoxReality/issues/3301

request xr mode failed: SecurityError: A user gesture is required.

Is seems that user gestures are not propagated correctly in WebXR promises

Assignee: nobody → imanol
Assignee: imanol → nobody
Assignee: nobody → imanol
Status: NEW → ASSIGNED
Attachment #9152474 - Attachment is obsolete: true
Pushed by kgilbert@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/80274d77d424 xr.requestSession now checks for transient user activation rather than just user input. r=daoshengmu,edgar,imanol
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla79
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: