Bug 1641615 - xr.requestSession now checks for transient user activation rather than just user input. r=daoshengmu,edgar,imanol

Differential Revision: https://phabricator.services.mozilla.com/D77558